--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -2,8 +2,9 @@ name: Auto Update Repo from Endpoint
 
 on:
   schedule:
-    - cron: '0 */12 * * *' # every 12 hours
-  workflow_dispatch: # allows manual trigger
+    - cron: '30 2 * * *'   # 08:00 IST
+    - cron: '30 14 * * *'  # 20:00 IST
+  workflow_dispatch:       # manual trigger
 
 jobs:
   update:
