--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -33,6 +33,7 @@ jobs:
         # Configure Git
         git config user.name "github-actions"
         git config user.email "actions@github.com"
+        git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
 
         # Only commit if data changed
         git add hs.m3u
